  name
* (bug 11206) api.php should honor maxlag
* Added diff generation to prop=revisions
* Added support for traditional, unified and array diffs to prop=revisions
* Make prop=info check for restrictions in the old format too.
* Add apihighlimits permission, default for sysops and bots
* Add limit=max to use maximal limit

=== Languages updated in 1.12 ===

* Afrikaans (af)
* Akan (ak) (new)
* Amharic (am) (new)
* Aragonese (an)
* Old English (ang) (new)
* Arabic (ar)
* Aramaic (arc)
* Mapudungun (arn) (new)
* Assamese (as)
* Asturian (ast)
* Aymara (ay)
* Samogitian (bat-smg)
* Boarisch (bar)
* Bikol Central (bcl)
* Belarusian Taraskievica orthography (be-tarask)
* Bulgarian (bg)
* Bislama (bi) (new)
* Bamanankan (bm)
* Bengali (bn)
* Bishnupriya Manipuri (bpy)
* Breton (br)
* Buginese (bug) (new)
* Catalan (ca)
* Zamboangueño (cbk-zam) (new)
* Min Dong (cdo) (new)
* Chechen (ce)
* Cebuano (ceb) (new)
* Crimean Tatar (Cyrillic) (crh-cyrl) (new)
* Crimean Tatar (Latin) (crh-latn) (new)
* Czech (cs)
* Cassubian (csb)
* Old Church Slavonic (cu)
* Welsh (cy)
* Danish (da)
* German (de)
* Lower Sorbian (dsb) (new)
* Divehi (dv)
* Ewe (ee) (new)
* Greek (el)
* English (en)
* Spanish (es)
* Estonian (et)
* Euskara (eu)
* Extremaduran (ext)
* Finnish (fi)
* Persian (fa)
* Fulah (ff)
* Võro (fiu-vro)
* Faroese (fo)
* French (fr)
* Cajun French (frc)
* Franco-Provençal (frp)
* Frisian (fy)
* Irish (ga)
* Gön-gnŷ (gan) (new)
* Galician (gl)
* Gilaki (glk) (new)
* Ancient Greek (grc) (new)
* Swiss German (gsw)
* Hakka (hak)
* Hebrew (he)
* Croatian (hr)
* Upper Sorbian (hsb)
* Hungarian (hu)
* Armenian (hy)
* Interlingua (ia)
* Indonesian (id)
* Interlingue (ie) (new)
* Ingush (inh) (new)
* Ido (io) (new)
* Icelandic (is)
* Italian (it)
* Japanese (ja)
* Georgian (ka)
* Kara-Kalpak (kaa)
* Kabyle (kab)
* Kazakh (kk)
* Kannada (kn)
* Korean (ko)
* Kölsch (ksh)
* Kurdish (Latin) (ku-latn)
* Cornish (kw) (new)
* Latin (la)
* Luxembourgish (lb) (new)
* Lak (lbe) (new)